section about - done mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piotr Krzaczkowski</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -48,6 +54,23 @@
           <a href="#contact" class="header-link">Contact</a>
         </div>
       </header>
+      <main class="main">
+        <div class="about-me">
+          <p class="title-section">About me</p>
+          <p class="text-section">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            ipsum maxime perferendis nobis quod ea sapiente, recusandae quae
+            quas ab fuga blanditiis assumenda ratione quis explicabo eaque
+            voluptates tempora reiciendis minus beatae laudantium repellendus
+            laborum laboriosam doloremque! Quos quia, vitae deserunt natus cum
+            reprehenderitmo? Neque natus vel cum error sequi repudiandae fugit
+            nihil atque. Nam ut error, at laborum, corporis, excepturi quas
+            nesciunt adipisci obcaecati sequi fugit veritatis impedit culpa
+            placeat. Laborum impedit consequuntur animi porro amet fugit sint
+            doloremque suscipit ratione eos.
+          </p>
+        </div>
+      </main>
     </div>
     <script src="./index.js"></script>
   </body>
