work on font awesome - skill section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,31 @@
             doloremque suscipit ratione eos.
           </p>
         </div>
+        <div class="skills">
+          <p class="title-section">Skills and tools</p>
+          <div class="skills-wrapper">
+            <p class="skill-box">
+              <i class="skill-font fab fa-html5"></i>HTML5
+            </p>
+            <p class="skill-box">
+              <i class="skill-font fab fa-css3-alt"></i>CSS
+            </p>
+            <p class="skill-box"><i class="skill-font fab fa-sass"></i>SASS</p>
+            <p class="skill-box">
+              <i class="skill-font fab fa-js-square"></i>JavaScript
+            </p>
+            <p class="skill-box">
+              <i class="skill-font fab fa-react"></i>React
+            </p>
+            <p class="skill-box">
+              <i class="skill-font fab fa-bootstrap"></i>Bootstrap
+            </p>
+            <p class="skill-box">
+              <i class="skill-font fab fa-git-alt"></i>Git
+            </p>
+            <p class="skill-box"><i class="skill-font fab fa-npm"></i>npm</p>
+          </div>
+        </div>
       </main>
     </div>
     <script src="./index.js"></script>
