first look on projects section

--- a/index.html
+++ b/index.html
@@ -73,26 +73,30 @@
         <div class="skills">
           <p class="title-section">Skills and tools</p>
           <div class="skills-wrapper">
-            <p class="skill-box">
-              <i class="skill-font fab fa-html5"></i>HTML5
-            </p>
-            <p class="skill-box">
-              <i class="skill-font fab fa-css3-alt"></i>CSS
-            </p>
-            <p class="skill-box"><i class="skill-font fab fa-sass"></i>SASS</p>
-            <p class="skill-box">
-              <i class="skill-font fab fa-js-square"></i>JavaScript
-            </p>
-            <p class="skill-box">
-              <i class="skill-font fab fa-react"></i>React
-            </p>
-            <p class="skill-box">
-              <i class="skill-font fab fa-bootstrap"></i>Bootstrap
-            </p>
-            <p class="skill-box">
-              <i class="skill-font fab fa-git-alt"></i>Git
-            </p>
-            <p class="skill-box"><i class="skill-font fab fa-npm"></i>npm</p>
+            <i class="skill-font fab fa-html5"></i>
+
+            <i class="skill-font fab fa-css3-alt"></i>
+
+            <i class="skill-font fab fa-sass"></i>
+
+            <i class="skill-font fab fa-js-square"></i>
+
+            <i class="skill-font fab fa-react"></i>
+
+            <i class="skill-font fab fa-bootstrap"></i>
+
+            <i class="skill-font fab fa-git-alt"></i>
+
+            <i class="skill-font fab fa-npm"></i>
+          </div>
+        </div>
+        <div class="projects">
+          <div class="project-box">
+            <div class="img"></div>
+            <div class="project-btn-box">
+              <a href="" class="btn-link-project">Demp</a
+              ><a href="" class="btn-link-project">Code</a>
+            </div>
           </div>
         </div>
       </main>
