minor final changes - mobile version

--- a/index.html
+++ b/index.html
@@ -91,15 +91,62 @@
           </div>
         </div>
         <div class="projects">
+          <p class="title-section">Portfolio</p>
           <div class="project-box">
-            <div class="img"></div>
+            <p class="title-project">Cv Website</p>
+            <div class="project-img">&thinsp;</div>
             <div class="project-btn-box">
-              <a href="" class="btn-link-project">Demp</a
+              <a href="" class="btn-link-project">Demo</a
               ><a href="" class="btn-link-project">Code</a>
             </div>
+            <p class="technologies">HTML | SASS | JavaScript</p>
+          </div>
+          <div class="project-box">
+            <p class="title-project">Cv Website</p>
+            <div class="project-img">&thinsp;</div>
+            <div class="project-btn-box">
+              <a href="" class="btn-link-project">Demo</a
+              ><a href="" class="btn-link-project">Code</a>
+            </div>
+            <p class="technologies">HTML | SASS | JavaScript</p>
+          </div>
+          <div class="project-box">
+            <p class="title-project">Cv Website</p>
+            <div class="project-img">&thinsp;</div>
+            <div class="project-btn-box">
+              <a href="" class="btn-link-project">Demo</a
+              ><a href="" class="btn-link-project">Code</a>
+            </div>
+            <p class="technologies">HTML | SASS | JavaScript</p>
+          </div>
+          <div class="project-box">
+            <p class="title-project">Cv Website</p>
+            <div class="project-img">&thinsp;</div>
+            <div class="project-btn-box">
+              <a href="" class="btn-link-project">Demo</a
+              ><a href="" class="btn-link-project">Code</a>
+            </div>
+            <p class="technologies">HTML | SASS | JavaScript</p>
+          </div>
+        </div>
+        <div class="contact">
+          <p class="title-section">Contact</p>
+          <div class="contact-links-wrapper">
+            <a href="mailto:slimshade93@wp.pl" class="contact-link"
+              ><i class="contact-awesome fas fa-envelope"></i>slimshade93@wp.pl
+            </a>
+            <a href="#" class="contact-link"
+              ><i class="contact-awesome fab fa-github"></i>Github
+            </a>
+            <a href="#" class="contact-link"
+              ><i class="contact-awesome fab fa-linkedin"></i>LinkedIn
+            </a>
           </div>
         </div>
       </main>
+      <footer class="footer">
+        <p class="title-footer">Piotr Krzaczkowski 2021</p>
+      </footer>
     </div>
     <script src="./index.js"></script>
   </body>
