working on mq for tablet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <ul class="mobile-list">
             <li class="mobile-li">
-              <a href="#about" class="mobile-link">About me</a>
+              <a href="#aboutme" class="mobile-link">About me</a>
             </li>
             <li class="mobile-li">
               <a href="#skills" class="mobile-link">Skills</a>
@@ -40,6 +40,7 @@
             </li>
           </ul>
         </div>
+        <div class="mobile-desktop"></div>
       </nav>
       <header class="header" id="header">
         <div class="stars-container">
@@ -55,7 +56,7 @@
         </div>
       </header>
       <main class="main">
-        <div class="about-me">
+        <div class="about-me" id="aboutme">
           <p class="title-section">About me</p>
           <p class="text-section">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
@@ -70,7 +71,7 @@
             doloremque suscipit ratione eos.
           </p>
         </div>
-        <div class="skills">
+        <div class="skills" id="skills">
           <p class="title-section">Skills and tools</p>
           <div class="skills-wrapper">
             <i class="skill-font fab fa-html5"></i>
@@ -90,46 +91,64 @@
             <i class="skill-font fab fa-npm"></i>
           </div>
         </div>
-        <div class="projects">
+        <div class="projects" id="projects">
           <p class="title-section">Portfolio</p>
+          <!-- PROJECT BOX -->
           <div class="project-box">
             <p class="title-project">Cv Website</p>
-            <div class="project-img">&thinsp;</div>
+            <img
+              src="./img/AccoPiano.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
             <div class="project-btn-box">
               <a href="" class="btn-link-project">Demo</a
               ><a href="" class="btn-link-project">Code</a>
             </div>
             <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
+          <!-- __________________________ -->
           <div class="project-box">
-            <p class="title-project">Cv Website</p>
-            <div class="project-img">&thinsp;</div>
+            <p class="title-project">AccoPiano</p>
+            <img
+              src="./img/AccoPiano.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
             <div class="project-btn-box">
               <a href="" class="btn-link-project">Demo</a
               ><a href="" class="btn-link-project">Code</a>
             </div>
-            <p class="technologies">HTML | SASS | JavaScript</p>
+            <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
           <div class="project-box">
-            <p class="title-project">Cv Website</p>
-            <div class="project-img">&thinsp;</div>
+            <p class="title-project">DeepBreath</p>
+            <img
+              src="./img/DeepBreath.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
             <div class="project-btn-box">
               <a href="" class="btn-link-project">Demo</a
               ><a href="" class="btn-link-project">Code</a>
             </div>
-            <p class="technologies">HTML | SASS | JavaScript</p>
+            <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
           <div class="project-box">
-            <p class="title-project">Cv Website</p>
-            <div class="project-img">&thinsp;</div>
+            <p class="title-project">Metronome</p>
+            <img
+              src="./img/Metronome.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
             <div class="project-btn-box">
               <a href="" class="btn-link-project">Demo</a
               ><a href="" class="btn-link-project">Code</a>
             </div>
-            <p class="technologies">HTML | SASS | JavaScript</p>
+            <p class="technologies">CSS | React</p>
           </div>
         </div>
-        <div class="contact">
+        <div class="contact" id="contact">
           <p class="title-section">Contact</p>
           <div class="contact-links-wrapper">
             <a href="mailto:slimshade93@wp.pl" class="contact-link"
