work on main section - desktop version

--- a/index.html
+++ b/index.html
@@ -40,7 +40,26 @@
             </li>
           </ul>
         </div>
-        <div class="mobile-desktop"></div>
+        <div class="desktop-menu">
+          <a href="#header" class="desktop-title-link">
+            <h1 class="desktop-name">Piotr Krzaczkowski</h1>
+            <h2 class="desktop-title">Front-end Developer</h2>
+          </a>
+          <ul class="desktop-nav">
+            <li class="desktop-li">
+              <a href="#aboutme" class="desktop-link">About me</a>
+            </li>
+            <li class="desktop-li">
+              <a href="#skills" class="desktop-link">Skills</a>
+            </li>
+            <li class="desktop-li">
+              <a href="#projects" class="desktop-link">Projects</a>
+            </li>
+            <li class="desktop-li">
+              <a href="#contact" class="desktop-link">Contact</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       <header class="header" id="header">
         <div class="stars-container">
@@ -167,6 +186,7 @@
         <p class="title-footer">Piotr Krzaczkowski 2021</p>
       </footer>
     </div>
+    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
