adding a email form

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <a href="#contact" class="header-link">Contact</a>
         </div>
       </header>
+
       <main class="main">
         <div class="about-me" id="aboutme">
           <p class="title-section">About me</p>
@@ -116,13 +117,17 @@
           <div class="project-box">
             <p class="title-project">Cv Website</p>
             <img
-              src="./img/AccoPiano.jpg"
+              src="./img/PortfolioPage.jpg"
               alt="Personal Website"
               class="project-img"
             />
             <div class="project-btn-box">
-              <a href="" class="btn-link-project">Demo</a
-              ><a href="" class="btn-link-project">Code</a>
+              <a href="#" class="btn-link-project">Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/CvWebsite"
+                class="btn-link-project"
+                >Code</a
+              >
             </div>
             <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
@@ -135,8 +140,15 @@
               class="project-img"
             />
             <div class="project-btn-box">
-              <a href="" class="btn-link-project">Demo</a
-              ><a href="" class="btn-link-project">Code</a>
+              <a
+                href="https://piotrkrzaczkowski.github.io/DigiAcc/"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/DigiAcc"
+                class="btn-link-project"
+                >Code</a
+              >
             </div>
             <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
@@ -148,8 +160,15 @@
               class="project-img"
             />
             <div class="project-btn-box">
-              <a href="" class="btn-link-project">Demo</a
-              ><a href="" class="btn-link-project">Code</a>
+              <a
+                href="https://piotrkrzaczkowski.github.io/DeepBreathApp/"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/DeepBreathApp"
+                class="btn-link-project"
+                >Code</a
+              >
             </div>
             <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
@@ -161,8 +180,15 @@
               class="project-img"
             />
             <div class="project-btn-box">
-              <a href="" class="btn-link-project">Demo</a
-              ><a href="" class="btn-link-project">Code</a>
+              <a
+                href="https://piotrkrzaczkowski.github.io/Metronome/"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/Metronome"
+                class="btn-link-project"
+                >Code</a
+              >
             </div>
             <p class="technologies">CSS | React</p>
           </div>
@@ -182,11 +208,12 @@
           </div>
         </div>
       </main>
+
       <footer class="footer">
         <p class="title-footer">Piotr Krzaczkowski 2021</p>
       </footer>
     </div>
-    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
