--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
               class="project-img"
             />
             <div class="project-btn-box">
-              <a href="#" class="btn-link-project">Demo</a
+              <a href="#" class="btn-link-project" target="_blank">Demo</a
               ><a
                 href="https://github.com/PiotrKrzaczkowski/CvWebsite"
+                target="_blank"
                 class="btn-link-project"
                 >Code</a
               >
@@ -142,6 +143,7 @@
             <div class="project-btn-box">
               <a
                 href="https://piotrkrzaczkowski.github.io/DigiAcc/"
+                target="_blank"
                 class="btn-link-project"
                 >Demo</a
               ><a
@@ -162,10 +164,12 @@
             <div class="project-btn-box">
               <a
                 href="https://piotrkrzaczkowski.github.io/DeepBreathApp/"
+                target="_blank"
                 class="btn-link-project"
                 >Demo</a
               ><a
                 href="https://github.com/PiotrKrzaczkowski/DeepBreathApp"
+                target="_blank"
                 class="btn-link-project"
                 >Code</a
               >
@@ -182,10 +186,12 @@
             <div class="project-btn-box">
               <a
                 href="https://piotrkrzaczkowski.github.io/Metronome/"
+                target="_blank"
                 class="btn-link-project"
                 >Demo</a
               ><a
                 href="https://github.com/PiotrKrzaczkowski/Metronome"
+                target="_blank"
                 class="btn-link-project"
                 >Code</a
               >
