slide animation on projectboxes and contact form

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </p>
         </div>
         <div class="skills" id="skills">
-          <p class="title-section">Skills and tools</p>
+          <p class="title-section">Tech stact I work with:</p>
           <div class="skills-wrapper">
             <i class="skill-font fab fa-html5"></i>
 
@@ -114,7 +114,7 @@
         <div class="projects" id="projects">
           <p class="title-section">Portfolio</p>
           <!-- PROJECT BOX -->
-          <div class="project-box">
+          <div class="project-box reveal">
             <p class="title-project">Cv Website</p>
             <img
               src="./img/PortfolioPage.jpg"
@@ -133,7 +133,7 @@
             <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
           <!-- __________________________ -->
-          <div class="project-box">
+          <div class="project-box reveal">
             <p class="title-project">AccoPiano</p>
             <img
               src="./img/AccoPiano.jpg"
@@ -154,7 +154,7 @@
             </div>
             <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
-          <div class="project-box">
+          <div class="project-box reveal">
             <p class="title-project">DeepBreath</p>
             <img
               src="./img/DeepBreath.jpg"
@@ -176,7 +176,7 @@
             </div>
             <p class="technologies">HTML | CSS | JavaScript</p>
           </div>
-          <div class="project-box">
+          <div class="project-box reveal">
             <p class="title-project">Metronome</p>
             <img
               src="./img/Metronome.jpg"
@@ -199,7 +199,7 @@
             <p class="technologies">CSS | React</p>
           </div>
         </div>
-        <div class="contact" id="contact">
+        <div class="contact reveal" id="contact">
           <p class="title-section">Contact</p>
 
           <form
