update section aboutme

--- a/index.html
+++ b/index.html
@@ -79,16 +79,21 @@
         <div class="about-me" id="aboutme">
           <p class="title-section">About me</p>
           <p class="text-section">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-            ipsum maxime perferendis nobis quod ea sapiente, recusandae quae
-            quas ab fuga blanditiis assumenda ratione quis explicabo eaque
-            voluptates tempora reiciendis minus beatae laudantium repellendus
-            laborum laboriosam doloremque! Quos quia, vitae deserunt natus cum
-            reprehenderitmo? Neque natus vel cum error sequi repudiandae fugit
-            nihil atque. Nam ut error, at laborum, corporis, excepturi quas
-            nesciunt adipisci obcaecati sequi fugit veritatis impedit culpa
-            placeat. Laborum impedit consequuntur animi porro amet fugit sint
-            doloremque suscipit ratione eos.
+            My name is Piotr Krzaczkowski and I’m a beginner Junior Front-End
+            Developer. I graduated from Music Academy as a classical
+            accordionist. However, in the meantime, I got interested in
+            Front-end technologies. About one and a half years ago I’ve decided
+            to make programming my full-time profession. <br /><br />
+            Currently, my goal is to find an employer who will give me an
+            opportunity to use skills I’ve learned through my coding journey, as
+            well further improve those skills while working on interesting and
+            creative projects. Such an opportunity will raise my Front-End
+            development qualifications and hopefully, will help me to gain
+            higher-level positions in the future. <br /><br />
+            As developer my main interest is JavaScript. I put a lot of work to
+            write a clear and semantically correct code. Moreover, I work with
+            technologies such as HTML, CSS, JavaScript, Sass, Github, Photoshop
+            on a daily basis. I'm also familliar with RWD and React.
           </p>
         </div>
         <div class="skills" id="skills">
