animation contact fix

--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
             <p class="technologies">CSS | React</p>
           </div>
         </div>
-        <div class="contact reveal" id="contact">
+        <div class="contact" id="contact">
           <p class="title-section">Contact</p>
 
           <form
             action="mailto:slimshade93@wp.pl"
-            class="contact-form"
+            class="contact-form reveal"
             id="contact-form"
           >
             <input
