--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- <div class="wrapper-start-animation"></div> -->
       <nav class="navigation">
         <div class="mobile-menu">
           <div class="mobile-nav">
@@ -147,13 +148,14 @@
             />
             <div class="project-btn-box">
               <a
-                href="https://piotrkrzaczkowski.github.io/DigiAcc/"
+                href="https://piotrkrzaczkowski.github.io/AccoPiano/"
                 target="_blank"
                 class="btn-link-project"
                 >Demo</a
               ><a
-                href="https://github.com/PiotrKrzaczkowski/DigiAcc"
+                href="https://github.com/PiotrKrzaczkowski/AccoPiano"
                 class="btn-link-project"
+                target="_blank"
                 >Code</a
               >
             </div>
