added title::after animation

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </p>
         </div>
         <div class="skills" id="skills">
-          <p class="title-section">Tech stact I work with:</p>
+          <p class="title-section">Tech stact:</p>
           <div class="skills-wrapper">
             <i class="skill-font fab fa-html5"></i>
 
