minor changes on styles

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <p class="title-section">Portfolio</p>
           <!-- PROJECT BOX -->
           <div class="project-box reveal">
-            <p class="title-project">Cv Website</p>
+            <p class="title-project">CV Website</p>
             <img
               src="./img/PortfolioPage.jpg"
               alt="Personal Website"
