portfolio upgrade fitness

--- a/index.html
+++ b/index.html
@@ -137,6 +137,30 @@
             </div>
             <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
+          <!-- _______________________________ -->
+          <div class="project-box reveal">
+            <p class="title-project">Fitness Landing Page</p>
+            <img
+              src="./img/FitnessLanding.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://piotrkrzaczkowski.github.io/personal-trainer-landing-page/"
+                target="_blank"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/personal-trainer-landing-page"
+                target="_blank"
+                class="btn-link-project"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">CSS | React</p>
+          </div>
+
           <!-- __________________________ -->
           <div class="project-box reveal">
             <p class="title-project">AccoPiano</p>
@@ -181,28 +205,6 @@
               >
             </div>
             <p class="technologies">HTML | CSS | JavaScript</p>
-          </div>
-          <div class="project-box reveal">
-            <p class="title-project">Metronome</p>
-            <img
-              src="./img/Metronome.jpg"
-              alt="Personal Website"
-              class="project-img"
-            />
-            <div class="project-btn-box">
-              <a
-                href="https://piotrkrzaczkowski.github.io/Metronome/"
-                target="_blank"
-                class="btn-link-project"
-                >Demo</a
-              ><a
-                href="https://github.com/PiotrKrzaczkowski/Metronome"
-                target="_blank"
-                class="btn-link-project"
-                >Code</a
-              >
-            </div>
-            <p class="technologies">CSS | React</p>
           </div>
         </div>
         <div class="contact" id="contact">
