comments in js file and minor changes on html file

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 >Code</a
               >
             </div>
-            <p class="technologies">CSS | React</p>
+            <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
 
           <!-- __________________________ -->
