--- a/index.html
+++ b/index.html
@@ -163,6 +163,28 @@
 
           <!-- __________________________ -->
           <div class="project-box reveal">
+            <p class="title-project">Recipe App</p>
+            <img
+              src="./img/recipe.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://piotrkrzaczkowski.github.io/recipe-app/"
+                class="btn-link-project"
+                target="_blank"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/recipe-app"
+                target="_blank"
+                class="btn-link-project"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">HTML | CSS | JavaScript</p>
+          </div>
+          <div class="project-box reveal">
             <p class="title-project">AccoPiano</p>
             <img
               src="./img/AccoPiano.jpg"
@@ -179,6 +201,28 @@
                 href="https://github.com/PiotrKrzaczkowski/AccoPiano"
                 class="btn-link-project"
                 target="_blank"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">HTML | CSS | JavaScript</p>
+          </div>
+          <div class="project-box reveal">
+            <p class="title-project">Rock Paper Scissors</p>
+            <img
+              src="./img/Rock-paper-scissors.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://piotrkrzaczkowski.github.io/Rock-Paper-Scissors/"
+                target="_blank"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/Rock-Paper-Scissors"
+                target="_blank"
+                class="btn-link-project"
                 >Code</a
               >
             </div>
