footer width and projects changes

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
           <!-- __________________________ -->
           <div class="project-box reveal">
-            <p class="title-project">Recipe App</p>
+            <p class="title-project">Vanilla JS Recipe App</p>
             <img
               src="./img/recipe.jpg"
               alt="Personal Website"
