--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piotr Krzaczkowski</title>
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -163,7 +164,7 @@
 
           <!-- __________________________ -->
           <div class="project-box reveal">
-            <p class="title-project">Vanilla JS Recipe App</p>
+            <p class="title-project">Recipe App</p>
             <img
               src="./img/recipe.jpg"
               alt="Personal Website"
