--- a/index.html
+++ b/index.html
@@ -138,6 +138,28 @@
             </div>
             <p class="technologies">HTML | SASS | JavaScript</p>
           </div>
+          <div class="project-box reveal">
+            <p class="title-project">Todo App</p>
+            <img
+              src="./img/todo.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://toodooapp.netlify.app/"
+                target="_blank"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/Todo-React"
+                target="_blank"
+                class="btn-link-project"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">React | CSS</p>
+          </div>
           <!-- _______________________________ -->
           <div class="project-box reveal">
             <p class="title-project">Fitness Landing Page</p>
@@ -222,28 +244,6 @@
                 >Demo</a
               ><a
                 href="https://github.com/PiotrKrzaczkowski/Rock-Paper-Scissors"
-                target="_blank"
-                class="btn-link-project"
-                >Code</a
-              >
-            </div>
-            <p class="technologies">HTML | CSS | JavaScript</p>
-          </div>
-          <div class="project-box reveal">
-            <p class="title-project">DeepBreath</p>
-            <img
-              src="./img/DeepBreath.jpg"
-              alt="Personal Website"
-              class="project-img"
-            />
-            <div class="project-btn-box">
-              <a
-                href="https://piotrkrzaczkowski.github.io/DeepBreathApp/"
-                target="_blank"
-                class="btn-link-project"
-                >Demo</a
-              ><a
-                href="https://github.com/PiotrKrzaczkowski/DeepBreathApp"
                 target="_blank"
                 class="btn-link-project"
                 >Code</a
