react recipeapp added

--- a/index.html
+++ b/index.html
@@ -160,6 +160,28 @@
             </div>
             <p class="technologies">React | CSS</p>
           </div>
+          <div class="project-box reveal">
+            <p class="title-project">Recipe App</p>
+            <img
+              src="./img/recipe-react.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://recipeapp-reactt.netlify.app/"
+                target="_blank"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/react-recipe-app"
+                target="_blank"
+                class="btn-link-project"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">React | CSS</p>
+          </div>
           <!-- _______________________________ -->
           <div class="project-box reveal">
             <p class="title-project">Fitness Landing Page</p>
