weatherapp added to portfolio

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 >Code</a
               >
             </div>
-            <p class="technologies">React | CSS</p>
+            <p class="technologies">CSS | React</p>
           </div>
           <div class="project-box reveal">
             <p class="title-project">Recipe App</p>
@@ -180,7 +180,29 @@
                 >Code</a
               >
             </div>
-            <p class="technologies">React | CSS</p>
+            <p class="technologies">CSS | React</p>
+          </div>
+          <div class="project-box reveal">
+            <p class="title-project">Weather App</p>
+            <img
+              src="./img/weather.jpg"
+              alt="Personal Website"
+              class="project-img"
+            />
+            <div class="project-btn-box">
+              <a
+                href="https://weather-vanilla-app.netlify.app/"
+                target="_blank"
+                class="btn-link-project"
+                >Demo</a
+              ><a
+                href="https://github.com/PiotrKrzaczkowski/weather-app"
+                target="_blank"
+                class="btn-link-project"
+                >Code</a
+              >
+            </div>
+            <p class="technologies">CSS | JavaScript</p>
           </div>
           <!-- _______________________________ -->
           <div class="project-box reveal">
