todo-js uploaded

--- a/index.html
+++ b/index.html
@@ -162,6 +162,28 @@
               <p class="technologies">CSS | React</p>
             </div>
             <div class="project-box reveal">
+              <p class="title-project">Task Manager</p>
+              <img
+                src="./img/task manager.jpg"
+                alt="Personal Website"
+                class="project-img"
+              />
+              <div class="project-btn-box">
+                <a
+                  href="https://to-do-list-j-s.netlify.app/"
+                  class="btn-link-project"
+                  target="_blank"
+                  >Demo</a
+                ><a
+                  href="https://github.com/PiotrKrzaczkowski/todo-list-js"
+                  target="_blank"
+                  class="btn-link-project"
+                  >Code</a
+                >
+              </div>
+              <p class="technologies">HTML | SASS | JavaScript</p>
+            </div>
+            <div class="project-box reveal">
               <p class="title-project">Recipe App</p>
               <img
                 src="./img/recipe-react.jpg"
