--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
             <a href="#projects" class="header-link">Projects</a>
             <a href="#contact" class="header-link">Contact</a>
           </div>
+          <div class="planet-container">
+            <div class="planet" data-speed=".4">
+              <img
+                src="./img/stars/earth-min.png"
+                alt="planet"
+                class="planeta"
+              />
+            </div>
+            <div class="planet" data-speed=".2">
+              <img src="./img/stars/jupiter.png" alt="planet" class="planeta" />
+            </div>
+            <div class="planet" data-speed="-.2">
+              <img src="./img/stars/mars.png" alt="planet" class="planeta" />
+            </div>
+          </div>
         </header>
 
         <main class="main">
