fixed mousemove problem

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <a href="#contact" class="header-link">Contact</a>
           </div>
           <div class="planet-container">
-            <div class="planet" data-speed=".4">
+            <div class="planet" data-speed="1">
               <img
                 src="./img/stars/earth-min.png"
                 alt="planet"
                 class="planeta"
               />
             </div>
-            <div class="planet" data-speed=".2">
+            <div class="planet" data-speed="1">
               <img src="./img/stars/jupiter.png" alt="planet" class="planeta" />
             </div>
-            <div class="planet" data-speed="-.2">
+            <div class="planet" data-speed="-1">
               <img src="./img/stars/mars.png" alt="planet" class="planeta" />
             </div>
           </div>
